--- a/src/app/user/add-user.component.html
+++ b/src/app/user/add-user.component.html
@@ -1,21 +1,51 @@
 <div class="col-md-6">
   <h2 class="text-center">Add User</h2>
 <form>
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label for="email">Email address:</label>
     <input type="email" [(ngModel)]="user.email" placeholder="Email" name="email" class="form-control" id="email">
+  </div> -->
+
+  <div class="form-group">
+    <label for="name">Name:</label>
+    <input [(ngModel)]="user.name" placeholder="Name" name="name" class="form-control" id="name">
   </div>
 
   <div class="form-group">
-    <label for="firstName">First Name:</label>
-    <input [(ngModel)]="user.firstName" placeholder="First Name" name="firstName" class="form-control" id="firstName">
+    <label for="password">Password:</label>
+    <input [(ngModel)]="user.password" type="password" placeholder="Password" name="password" class="form-control" id="password">
   </div>
-
   <div class="form-group">
-    <label for="lastName">Last Name:</label>
-    <input [(ngModel)]="user.lastName" placeholder="Last name" name="lastName" class="form-control" id="lastName">
+    <label for="mobile">Mobile:</label>
+    <input [(ngModel)]="user.mobile" placeholder="Mobile" name="mobile" class="form-control" id="mobile">
+  </div>
+  <div class="form-group">
+    <label for="address">Address:</label>
+    <input [(ngModel)]="user.address" placeholder="Address" name="address" class="form-control" id="address">
+  </div>
+  <div class="form-group">
+    <label for="sex">Sex:</label>
+    <select name="sex" [(ngModel)]="user.sex">
+       <option [value]="" [selected]="user.sex ==''">Select</option>
+       <option [value]="M" [selected]="user.sex =='M'">Male</option>
+       <option [value]="F" [selected]="user.sex =='F'">Female</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="designation">Designation:</label>
+    <input [(ngModel)]="user.designation" type="radio" name="designation" class="form-control" id="designation" value="Employee"> Employee
+    <input [(ngModel)]="user.designation" type="radio" name="designation" class="form-control" id="designation"value="Admin"> Admin
+  </div>
+  
+  <div class="form-group">
+   	<label for="dateOfJoining">Date Of Joining:</label>
+	<input [(ngModel)]="user.dateOfJoining" type="date" placeholder="Choose a Date" name="dateOfJoining" class="form-control" id="dateOfJoining">
   </div>
 
+	<div class="form-group">
+	   	<label for="rating">Ratings:</label>
+		<input [(ngModel)]="user.rating" type="range" placeholder="Choose a Date" name="rating" class="form-control" id="rating">
+	  </div>
   <button class="btn btn-success" (click)="createUser()">Create</button>
 </form>
 </div>
