--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -5,18 +5,18 @@
   <thead>
   <tr>
     <th class="hidden">Id</th>
-    <th>FirstName</th>
-    <th>LastName</th>
-    <th>Email</th>
+    <th>Name</th>
+    <th>Mobile</th>
+    <th>Date Of Joining</th>
     <th>Action</th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let user of users">
     <td class="hidden">{{user.id}}</td>
-    <td>{{user.firstName}}</td>
-    <td>{{user.lastName}}</td>
-    <td>{{user.email}}</td>
+    <td>{{user.name}}</td>
+    <td>{{user.mobile}}</td>
+    <td>{{user.dateOfJoining}}</td>
     <td><button class="btn btn-danger" (click)="deleteUser(user)"> Delete User</button></td>
   </tr>
   </tbody>
